+ Expand reversal window to long utrnno
+ Licence window correct exec by timer event
+ Change name to SIGNAL in Document
+ Bugs fix: incorrect bitmap representation,
+ Add license info to the window "About"
+ License agreement in CLI mode
+ "About" window renovation
+ License window renovation
+ --log-file in CLI mode
+ Setting "Show license agreement"
+ Change name from SIGNAL to Signal

• Bugs
  + Fall down when send empty transaction
  • Sends wrong data when set non-unique tab name
  + Takes MTI from Main tab only
  + Cannot send when tabName is empty
  • " Main"


# 0.19

• Tab order on JsoViews
• Setting don't print keep alive
• Undo / Redo by keyboard
• API mode -
    • API activate / stop
    • API settings
    • Swagger documentation
    • README.md
    • POSTMAN collection
    • Run API using CLI --api-mode
    • Setting wait for response / parallel
    • Move "Hotkeys" hint to settings
• Setting not print log in CLI mode; --print-log=True
• Settings tabs - GUI, CLI, API, About
•



• Error on console when run AboutWindow - Could not update timestamps for skipped samples
• Pin main tab and make the other movable
• Drag and drop files to JsonView
• Respect JSON-mode when set field value from complex fields constructor
• Reflect in the document - Main settings, the specification+, files format+, custom validations


• Bugs
    • Last tab bug - cannot process tab limits correctly
    + Specification -> set MTI -> Uncheck one -> ESC -> Don't save -> Specification -> DE2
    + Spec checkboxes in readonly mode change state
    + SpecUnsaved window does not display when spec validation error displayed
    + Log does not work on SpecWindow
    + CTRL+T with tab adding works incorrectly


• Licensing preparation
    • Change the framework to pyside
    • Buy music
    • Prepare code
    • Get Unlimit's disclaimer
    + Buy the logo
    + Gif copyright
    + Change the name


• BUG: No data in socket if delete field in spec
• Exceptions policy