@@ -175,7 +175,8 @@ class ComplexFieldsParser(Ui_ComplexFieldsParser, QDialog):
             error("Lost field data")
             return
 
-        transaction: Transaction = self.terminal.parse_main_window()
+        transactions: dict[str, Transaction] = self.terminal.parse_main_window()
+        tab_name, transaction = transactions.popitem()
         transaction.data_fields[field_number] = field_data
 
         self.terminal.parse_transaction(transaction)
@@ -230,9 +231,14 @@ class ComplexFieldsParser(Ui_ComplexFieldsParser, QDialog):
             return
 
         try:
-            transaction: Transaction = self.terminal.parse_main_window()
+            transactions: dict[str, Transaction] = self.terminal.parse_main_window()
+            tab_name, transaction = transactions.popitem()
+
         except Exception as window_parsing_error:
             error(window_parsing_error)
+            return
+
+        if not transaction:
             return
 
         if not (field_data := transaction.data_fields.get(field_number)):
